--- a/motorista.html
+++ b/motorista.html
@@ -1,169 +1,152 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Motorista - Sistema de Rastreabilidade</title>
-  <style>
-    html { scroll-behavior: smooth; }
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: url('motorista-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-      position: relative;
-    }
-
-    body::before {
-      content:"";
-      position: fixed;
-      top:0; left:0; right:0; bottom:0;
-      background: rgba(0,0,0,0.3);
-      z-index: -1;
-    }
-
-    header {
-      text-align: center;
-      padding: 30px 20px;
-    }
-
-    header h1 { margin:0; font-size:28px; }
-
-    /* Menu interno do Motorista */
-    .menu-motorista {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 20px;
-      flex-wrap: wrap;
-    }
-
-    .menu-motorista button {
-      padding: 15px 25px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      background: #2e86c1;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .menu-motorista button:hover { background: #1b4f72; }
-
-    section {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      border-radius: 8px;
-      background: rgba(255,255,255,0.9);
-      color: #333;
-      position: relative;
-    }
-
-    /* Dúvidas e Ajuda fixos no canto esquerdo */
-    .duvidas-ajuda {
-      position: fixed;
-      bottom: 30px;
-      left: 30px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      z-index: 10;
-    }
-    .duvidas-ajuda button {
-      padding: 10px 15px;
-      border-radius: 6px;
-      border: none;
-      background: #28b463;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .duvidas-ajuda button:hover { background: #1e8449; }
-
-    /* Botão voltar ao topo */
-    #topBtn {
-      display:none;
-      position:fixed;
-      bottom:30px;
-      right:30px;
-      z-index:20;
-      font-size:18px;
-      border:none;
-      outline:none;
-      background-color:#2e86c1;
-      color:white;
-      cursor:pointer;
-      padding:12px 18px;
-      border-radius:50%;
-      box-shadow:0 2px 6px rgba(0,0,0,0.3);
-      transition:background 0.3s;
-    }
-    #topBtn:hover { background-color:#1a5276; }
-  </style>
+<meta charset="UTF-8">
+<title>Motorista - Sistema de Rastreabilidade</title>
+<style>
+html { scroll-behavior: smooth; }
+body {
+  margin:0; font-family:Arial,sans-serif;
+  background: url('motorista-bg.jpg') no-repeat center center fixed;
+  background-size: cover; color:#fff; position: relative;
+}
+body::before { content:""; position:fixed; top:0; left:0; right:0; bottom:0; background: rgba(0,0,0,0.3); z-index:-1; }
+header { text-align:center; padding:30px;}
+header h1 { margin:0; font-size:28px;}
+section { max-width:900px; margin:20px auto; padding:20px; border-radius:8px; background: rgba(255,255,255,0.9); color:#333;}
+input, select { width:100%; padding:8px; margin:5px 0; }
+button { padding:10px 15px; margin-top:10px; border:none; border-radius:6px; background:#2e86c1; color:white; cursor:pointer; }
+button:hover { background:#1b4f72; }
+.duvidas-ajuda { position:fixed; bottom:30px; left:30px; display:flex; flex-direction:column; gap:10px; z-index:10; }
+.duvidas-ajuda button { padding:10px 15px; border-radius:6px; border:none; background:#28b463; color:white; cursor:pointer;}
+#topBtn { display:none; position:fixed; bottom:30px; right:30px; z-index:20; font-size:18px; border:none; outline:none; background-color:#2e86c1; color:white; cursor:pointer; padding:12px 18px; border-radius:50%; }
+#topBtn:hover { background-color:#1a5276; }
+#resumo { margin-top:20px; padding:10px; background:#dcdcdc; color:#333; border-radius:6px; }
+</style>
 </head>
 <body>
 
-  <header>
-    <h1>Motorista - Sistema de Rastreabilidade</h1>
-    <p>Escolha uma opção ou faça seu cadastro</p>
-  </header>
+<header>
+<h1>Motorista - Sistema de Rastreabilidade</h1>
+<p>Cadastre-se e selecione seu transporte do dia a dia</p>
+</header>
 
-  <!-- Menu interno do Motorista -->
-  <div class="menu-motorista">
-    <button onclick="window.location.href='linha.html'">Linhas</button>
-    <button onclick="window.location.href='rota.html'">Rotas</button>
-    <button onclick="window.location.href='onibus.html'">Ônibus</button>
-    <button onclick="window.location.href='rastreabilidade.html'">Rastreabilidade</button>
-  </div>
+<section id="cadastro-motorista">
+<h2>Cadastro de Motorista</h2>
+<form id="formMotorista" action="processa_motorista.php" method="POST">
+  <input type="text" id="nome" name="nome" placeholder="Nome" required>
+  <input type="email" id="email" name="email" placeholder="E-mail" required>
+  <input type="text" id="telefone" name="telefone" placeholder="Telefone">
+  <input type="password" id="senha" name="senha" placeholder="Senha" required>
 
-  <!-- Formulário do Motorista -->
-  <section id="cadastro-motorista">
-    <h2>Cadastro de Motorista</h2>
-    <form>
-      <input type="text" placeholder="Nome" required style="width:100%;margin:5px 0;padding:8px;">
-      <input type="text" placeholder="Usuário" required style="width:100%;margin:5px 0;padding:8px;">
-      <input type="password" placeholder="Senha" required style="width:100%;margin:5px 0;padding:8px;">
-      <input type="text" placeholder="Número da CNH" style="width:100%;margin:5px 0;padding:8px;">
-      <input type="text" placeholder="Linha Associada" style="width:100%;margin:5px 0;padding:8px;">
-      <button type="submit" style="margin-top:10px;padding:10px 20px;background:#2e86c1;color:white;border:none;border-radius:6px;cursor:pointer;">Enviar</button>
-    </form>
-  </section>
+  <h3>Selecione seu transporte do dia</h3>
+  <label>Linha:</label>
+  <select id="linha" name="linha">
+    <option value="">--Selecione--</option>
+    <option value="Linha 101">Linha 101</option>
+    <option value="Linha 102">Linha 102</option>
+    <option value="Linha 103">Linha 103</option>
+  </select>
 
-  <!-- Dúvidas e Ajuda -->
-  <div class="duvidas-ajuda">
-    <button onclick="scrollPara('duvidas')">Dúvidas</button>
-    <button onclick="scrollPara('ajuda')">Ajuda</button>
-  </div>
+  <label>Rota:</label>
+  <select id="rota" name="rota">
+    <option value="">--Selecione--</option>
+    <option value="Rota A">Rota A</option>
+    <option value="Rota B">Rota B</option>
+    <option value="Rota C">Rota C</option>
+  </select>
 
-  <!-- Seções Dúvidas e Ajuda -->
-  <section id="duvidas">
-    <h2>Dúvidas Frequentes</h2>
-    <p>Perguntas comuns e respostas.</p>
-  </section>
+  <label>Ônibus:</label>
+  <select id="onibus" name="onibus">
+    <option value="">--Selecione--</option>
+    <option value="Ônibus 1">Ônibus 1</option>
+    <option value="Ônibus 2">Ônibus 2</option>
+    <option value="Ônibus 3">Ônibus 3</option>
+  </select>
 
-  <section id="ajuda">
-    <h2>Ajuda</h2>
-    <p>Suporte e instruções.</p>
-  </section>
+  <h3>Favoritos</h3>
+  <input type="checkbox" id="favLinha" name="favLinha" value="Linha"> Linha favorita<br>
+  <input type="checkbox" id="favRota" name="favRota" value="Rota"> Rota favorita<br>
+  <input type="checkbox" id="favOnibus" name="favOnibus" value="Ônibus"> Ônibus favorito<br>
 
-  <!-- Botão voltar ao topo -->
-  <button onclick="topFunction()" id="topBtn" title="Voltar ao topo">↑</button>
+  <button type="submit">Salvar</button>
+</form>
 
-  <script>
-    // Scroll e botão topo
-    const topBtn = document.getElementById("topBtn");
-    window.onscroll = function(){
-      if(document.body.scrollTop>200 || document.documentElement.scrollTop>200){
-        topBtn.style.display="block";
-      }else{topBtn.style.display="none";}
-    }
-    function topFunction(){window.scrollTo({top:0,behavior:'smooth'});}
+<div id="resumo"></div>
+</section>
 
-    function scrollPara(id){
-      document.getElementById(id).scrollIntoView({behavior:'smooth'});
-    }
-  </script>
+<section id="rastreabilidade">
+<h2>Rastreabilidade</h2>
+<div id="map" style="width:100%;height:300px;background:#ccc;display:flex;align-items:center;justify-content:center;">
+Mapa Integrado Aqui
+</div>
+<div id="horarios" style="margin-top:10px;background:#eee;color:#333;padding:10px;border-radius:6px;">
+Horários e trajetórias aparecerão aqui
+</div>
+</section>
+
+<div class="duvidas-ajuda">
+  <button onclick="scrollPara('duvidas')">Dúvidas</button>
+  <button onclick="scrollPara('ajuda')">Ajuda</button>
+</div>
+
+<section id="duvidas">
+<h2>Dúvidas Frequentes</h2>
+<p>Perguntas comuns e respostas.</p>
+</section>
+
+<section id="ajuda">
+<h2>Ajuda</h2>
+<p>Suporte e instruções.</p>
+</section>
+
+<button onclick="topFunction()" id="topBtn">↑</button>
+
+<script>
+// botão voltar ao topo
+const topBtn = document.getElementById("topBtn");
+window.onscroll = function(){
+  if(document.body.scrollTop>200 || document.documentElement.scrollTop>200){
+    topBtn.style.display="block";
+  }else{topBtn.style.display="none";}
+}
+function topFunction(){ window.scrollTo({top:0,behavior:'smooth'});}
+function scrollPara(id){ document.getElementById(id).scrollIntoView({behavior:'smooth'}); }
+
+// preview local (resumo e rastreabilidade)
+const form = document.getElementById('formMotorista');
+form.addEventListener('submit', function(e){
+  e.preventDefault();
+  const nome = document.getElementById('nome').value;
+  const email = document.getElementById('email').value;
+  const telefone = document.getElementById('telefone').value;
+  const linha = document.getElementById('linha').value;
+  const rota = document.getElementById('rota').value;
+  const onibus = document.getElementById('onibus').value;
+  const favLinha = document.getElementById('favLinha').checked ? linha : '';
+  const favRota = document.getElementById('favRota').checked ? rota : '';
+  const favOnibus = document.getElementById('favOnibus').checked ? onibus : '';
+
+  const resumo = document.getElementById('resumo');
+  resumo.innerHTML = `<h3>Cadastro (local) salvo!</h3>
+                      <p><strong>Nome:</strong> ${nome}</p>
+                      <p><strong>E-mail:</strong> ${email}</p>
+                      <p><strong>Telefone:</strong> ${telefone}</p>
+                      <p><strong>Transporte do dia:</strong> Linha ${linha}, Rota ${rota}, Ônibus ${onibus}</p>
+                      <p><strong>Favoritos:</strong> ${favLinha} ${favRota} ${favOnibus}</p>`;
+
+  const horarios = document.getElementById('horarios');
+  horarios.innerHTML = `<p>Exibindo horários e trajetórias para:</p>
+                        <ul>
+                          <li>Linha: ${linha}</li>
+                          <li>Rota: ${rota}</li>
+                          <li>Ônibus: ${onibus}</li>
+                        </ul>`;
+
+  // Se tiver backend real, descomente a linha abaixo
+  // form.submit();
+});
+</script>
 
 </body>
 </html>
