--- a/usuario.html
+++ b/usuario.html
@@ -17,10 +17,28 @@ section { max-width:900px; margin:20px auto; padding:20px; border-radius:8px; ba
 input, select { width:100%; padding:8px; margin:5px 0; }
 button { padding:10px 15px; margin-top:10px; border:none; border-radius:6px; background:#2e86c1; color:white; cursor:pointer; }
 button:hover { background:#1b4f72; }
-.duvidas-ajuda { position:fixed; bottom:30px; left:30px; display:flex; flex-direction:column; gap:10px; z-index:10; }
-.duvidas-ajuda button { padding:10px 15px; border-radius:6px; border:none; background:#28b463; color:white; cursor:pointer;}
-#topBtn { display:none; position:fixed; bottom:30px; right:30px; z-index:20; font-size:18px; border:none; outline:none; background-color:#2e86c1; color:white; cursor:pointer; padding:12px 18px; border-radius:50%; }
+
+.duvidas-ajuda {
+  position:fixed;
+  bottom:30px;
+  right:30px;
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+  z-index:10;
+}
+.duvidas-ajuda button {
+  padding:10px 15px;
+  border-radius:6px;
+  border:none;
+  background:#28b463;
+  color:white;
+  cursor:pointer;
+}
+
+#topBtn { display:none; position:fixed; bottom:80px; right:30px; z-index:20; font-size:18px; border:none; outline:none; background-color:#2e86c1; color:white; cursor:pointer; padding:12px 18px; border-radius:50%; }
 #topBtn:hover { background-color:#1a5276; }
+
 #resumo { margin-top:20px; padding:10px; background:#dcdcdc; color:#333; border-radius:6px; }
 </style>
 </head>
@@ -64,11 +82,6 @@ button:hover { background:#1b4f72; }
     <option value="Ônibus 3">Ônibus 3</option>
   </select>
 
-  <h3>Favoritos</h3>
-  <input type="checkbox" id="favLinha" name="favLinha" value="Linha"> Linha favorita<br>
-  <input type="checkbox" id="favRota" name="favRota" value="Rota"> Rota favorita<br>
-  <input type="checkbox" id="favOnibus" name="favOnibus" value="Ônibus"> Ônibus favorito<br>
-
   <button type="submit">Salvar</button>
 </form>
 
@@ -81,7 +94,7 @@ button:hover { background:#1b4f72; }
 Mapa Integrado Aqui
 </div>
 <div id="horarios" style="margin-top:10px;background:#eee;color:#333;padding:10px;border-radius:6px;">
-Horários dos ônibus aparecerão aqui
+Horários e trajetórias aparecerão aqui
 </div>
 </section>
 
@@ -113,7 +126,7 @@ window.onscroll = function(){
 function topFunction(){ window.scrollTo({top:0,behavior:'smooth'});}
 function scrollPara(id){ document.getElementById(id).scrollIntoView({behavior:'smooth'}); }
 
-// preview local (resumo e rastreabilidade) antes de enviar ao backend
+// preview local (resumo e rastreabilidade)
 const form = document.getElementById('formUsuario');
 form.addEventListener('submit', function(e){
   e.preventDefault();
@@ -123,17 +136,13 @@ form.addEventListener('submit', function(e){
   const linha = document.getElementById('linha').value;
   const rota = document.getElementById('rota').value;
   const onibus = document.getElementById('onibus').value;
-  const favLinha = document.getElementById('favLinha').checked ? linha : '';
-  const favRota = document.getElementById('favRota').checked ? rota : '';
-  const favOnibus = document.getElementById('favOnibus').checked ? onibus : '';
 
   const resumo = document.getElementById('resumo');
   resumo.innerHTML = `<h3>Cadastro (local) salvo!</h3>
                       <p><strong>Nome:</strong> ${nome}</p>
                       <p><strong>E-mail:</strong> ${email}</p>
                       <p><strong>Telefone:</strong> ${telefone}</p>
-                      <p><strong>Transporte do dia:</strong> Linha ${linha}, Rota ${rota}, Ônibus ${onibus}</p>
-                      <p><strong>Favoritos:</strong> ${favLinha} ${favRota} ${favOnibus}</p>`;
+                      <p><strong>Transporte do dia:</strong> Linha ${linha}, Rota ${rota}, Ônibus ${onibus}</p>`;
 
   const horarios = document.getElementById('horarios');
   horarios.innerHTML = `<p>Exibindo horários e trajetórias para:</p>
@@ -143,7 +152,7 @@ form.addEventListener('submit', function(e){
                           <li>Ônibus: ${onibus}</li>
                         </ul>`;
 
-  // Se você tiver backend real, descomente a linha abaixo para enviar o form
+  // Se tiver backend real, descomente a linha abaixo
   // form.submit();
 });
 </script>
