--- a/index.html
+++ b/index.html
@@ -1,161 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Sistema de Rastreabilidade - Página Inicial</title>
-  <style>
-    html { scroll-behavior: smooth; }
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: url('Terminal_de_onibus_Pca.das_Bandeiras_01.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-      position: relative;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      top:0; left:0; right:0; bottom:0;
-      background: rgba(0,0,0,0.3);
-      z-index: -1;
-    }
-
-    header {
-      text-align: center;
-      padding: 60px 20px 20px 20px;
-    }
-
-    header h1 {
-      margin:0;
-      font-size:36px;
-    }
-
-    header p {
-      font-size:18px;
-    }
-
-    .menu-inicial {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      margin-top: 80px;
-      flex-wrap: wrap;
-      z-index: 2;
-      position: relative;
-    }
-
-    .menu-inicial button {
-      padding: 25px 40px;
-      font-size: 20px;
-      border-radius: 12px;
-      border: none;
-      cursor: pointer;
-      background: #2e86c1;
-      color: white;
-      transition: background 0.3s;
-    }
-    .menu-inicial button:hover {
-      background: #1b4f72;
-    }
-
-    /* Dúvidas e Ajuda fixos no canto esquerdo */
-    .duvidas-ajuda {
-      position: fixed;
-      bottom: 30px;
-      left: 30px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      z-index: 10;
-    }
-    .duvidas-ajuda button {
-      padding: 10px 15px;
-      border-radius: 6px;
-      border: none;
-      background: #28b463;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .duvidas-ajuda button:hover {
-      background: #1e8449;
-    }
-
-    /* Botão voltar ao topo */
-    #topBtn {
-      display:none;
-      position:fixed;
-      bottom:30px;
-      right:30px;
-      z-index:20;
-      font-size:18px;
-      border:none;
-      outline:none;
-      background-color:#2e86c1;
-      color:white;
-      cursor:pointer;
-      padding:12px 18px;
-      border-radius:50%;
-      box-shadow:0 2px 6px rgba(0,0,0,0.3);
-      transition:background 0.3s;
-    }
-    #topBtn:hover { background-color:#1a5276; }
-  </style>
+<meta charset="UTF-8">
+<title>Erika - Bolo e Salgados</title>
+<style>
+body {
+  margin:0;
+  font-family: Arial, sans-serif;
+  background: url('Terminal_de_onibus_Pca.das_Bandeiras_01.jpg') no-repeat center center fixed;
+  background-size: cover;
+  position: relative;
+  color: #fff;
+}
+body::before {
+  content:"";
+  position: fixed;
+  top:0; left:0; right:0; bottom:0;
+  background: rgba(0,0,0,0.4);
+  z-index: -1;
+}
+header { text-align:center; padding:40px; }
+header h1 { margin:0; font-size:36px; text-shadow: 2px 2px 4px #000; }
+section { display:flex; justify-content:center; margin-top:100px; gap:50px; }
+button {
+  padding:20px 30px;
+  font-size:20px;
+  border:none;
+  border-radius:10px;
+  cursor:pointer;
+  background: #2e86c1;
+  color:white;
+  box-shadow: 2px 2px 5px #000;
+}
+button:hover { background:#1b4f72; }
+.duvidas-ajuda {
+  position:fixed;
+  bottom:30px;
+  right:30px;
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+}
+.duvidas-ajuda button {
+  padding:10px 15px;
+  border-radius:6px;
+  border:none;
+  background:#28b463;
+  color:white;
+  cursor:pointer;
+}
+</style>
 </head>
 <body>
 
-  <header>
-    <h1>Sistema de Rastreabilidade de Frota</h1>
-    <p>Escolha uma opção para acessar</p>
-  </header>
+<header>
+  <h1>Erika - Bolo e Salgados</h1>
+  <p>Bem-vindo! Selecione uma opção abaixo:</p>
+</header>
 
-  <div class="menu-inicial">
-    <button onclick="window.location.href='motorista.html'">Motorista</button>
-    <button onclick="window.location.href='usuario.html'">Usuário</button>
-    <button onclick="window.location.href='rastreabilidade.html'">Rastreabilidade</button>
-  </div>
+<section>
+  <button onclick="location.href='motorista.html'">Motorista</button>
+  <button onclick="location.href='usuario.html'">Usuário</button>
+  <button onclick="location.href='rastreabilidade.html'">Rastreabilidade</button>
+</section>
 
-  <!-- Dúvidas e Ajuda fixos -->
-  <div class="duvidas-ajuda">
-    <button onclick="scrollPara('duvidas')">Dúvidas</button>
-    <button onclick="scrollPara('ajuda')">Ajuda</button>
-  </div>
+<div class="duvidas-ajuda">
+  <button onclick="scrollPara('duvidas')">Dúvidas</button>
+  <button onclick="scrollPara('ajuda')">Ajuda</button>
+</div>
 
-  <!-- Seções Dúvidas e Ajuda -->
-  <section id="duvidas" style="display:none;">
-    <h2>Dúvidas Frequentes</h2>
-    <p>Perguntas comuns e respostas.</p>
-  </section>
+<section id="duvidas" style="display:none;">
+  <h2>Dúvidas Frequentes</h2>
+  <p>Perguntas comuns e respostas.</p>
+</section>
 
-  <section id="ajuda" style="display:none;">
-    <h2>Ajuda</h2>
-    <p>Suporte e instruções.</p>
-  </section>
+<section id="ajuda" style="display:none;">
+  <h2>Ajuda</h2>
+  <p>Suporte e instruções.</p>
+</section>
 
-  <!-- Botão voltar ao topo -->
-  <button onclick="topFunction()" id="topBtn" title="Voltar ao topo">↑</button>
-
-  <script>
-    // Scroll e botão topo
-    const topBtn = document.getElementById("topBtn");
-    window.onscroll = function(){
-      if(document.body.scrollTop>200 || document.documentElement.scrollTop>200){
-        topBtn.style.display="block";
-      }else{
-        topBtn.style.display="none";
-      }
-    }
-    function topFunction(){
-      window.scrollTo({top:0,behavior:'smooth'});
-    }
-
-    function scrollPara(id){
-      const el = document.getElementById(id);
-      if(el) el.scrollIntoView({behavior:'smooth'});
-    }
-  </script>
+<script>
+function scrollPara(id){
+  const el = document.getElementById(id);
+  if(el){ el.scrollIntoView({behavior:'smooth'}); }
+}
+</script>
 
 </body>
 </html>
