--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Sistema de Transporte - Terminal da Bandeira</title>
+<title>Sistema de Rastreabilidade de Frota</title>
 <style>
 body {
   margin:0;
@@ -16,7 +16,7 @@ body::before {
   content:"";
   position: fixed;
   top:0; left:0; right:0; bottom:0;
-  background: rgba(0,0,0,0.4); /* deixa semi-transparente para destacar menu */
+  background: rgba(0,0,0,0.4);
   z-index: -1;
 }
 header { text-align:center; padding:40px; }
@@ -54,7 +54,7 @@ button:hover { background:#1b4f72; }
 <body>
 
 <header>
-  <h1>Sistema de Transporte - Terminal da Bandeira</h1>
+  <h1>Sistema de Rastreabilidade de Frota</h1>
   <p>Bem-vindo! Selecione uma opção abaixo:</p>
 </header>
 
