--- a/rastreabilidade.html
+++ b/rastreabilidade.html
@@ -1,59 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Rastreabilidade de Frota</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-
-  <style>
-    html, body { height: 100%; margin: 0; }
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-    header {
-      background: #222;
-      color: #fff;
-      padding: 15px;
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    #map { flex: 1; }
-  </style>
+<meta charset="UTF-8">
+<title>Rastreabilidade de Frota</title>
+<style>
+body { margin:0; font-family:Arial,sans-serif;
+  background: url('rastreabilidade-bg.jpg') no-repeat center center fixed;
+  background-size: cover; color:#fff;
+}
+body::before { content:""; position:fixed; top:0; left:0; right:0; bottom:0;
+  background: rgba(0,0,0,0.3); z-index:-1; }
+header { text-align:center; padding:30px;}
+header h1 { margin:0; font-size:28px; text-shadow:1px 1px 4px #000; }
+section { max-width:900px; margin:20px auto; padding:20px; border-radius:8px; background: rgba(255,255,255,0.9); color:#333; }
+#map { width:100%; height:400px; background:#ccc; display:flex; align-items:center; justify-content:center; margin-bottom:10px; font-size:24px; font-weight:bold; }
+select, button { padding:8px; margin:5px 0; border-radius:6px; border:none; }
+select { width:200px; }
+button { background:#2e86c1; color:white; cursor:pointer; }
+button:hover { background:#1b4f72; }
+.duvidas-ajuda { position:fixed; bottom:30px; right:30px; display:flex; flex-direction:column; gap:10px; }
+.duvidas-ajuda button { padding:10px 15px; border-radius:6px; border:none; background:#28b463; color:white; cursor:pointer; }
+</style>
 </head>
 <body>
-  <header>📡 Rastreabilidade de Frota</header>
-  <div id="map"></div>
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    // Inicializa o mapa
-    const map = L.map('map').setView([-23.563210, -46.654250], 13);
+<header>
+<h1>Rastreabilidade de Frota</h1>
+<p>Visualize a trajetória dos ônibus</p>
+</header>
 
-    // Adiciona camada de mapa (OpenStreetMap)
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '© OpenStreetMap contributors'
-    }).addTo(map);
+<section>
+<label>Linha:</label>
+<select id="linha">
+  <option value="">--Selecione--</option>
+  <option value="101">Linha 101</option>
+  <option value="102">Linha 102</option>
+  <option value="103">Linha 103</option>
+</select>
 
-    // Frota de ônibus simulada
-    const frota = [
-      { lat: -23.563210, lng: -46.654250, titulo: "Ônibus 101 - Linha Centro" },
-      { lat: -23.570500, lng: -46.657800, titulo: "Ônibus 202 - Zona Sul" },
-      { lat: -23.559000, lng: -46.650000, titulo: "Ônibus 303 - Zona Norte" }
-    ];
+<label>Rota:</label>
+<select id="rota">
+  <option value="">--Selecione--</option>
+  <option value="A">Rota A</option>
+  <option value="B">Rota B</option>
+  <option value="C">Rota C</option>
+</select>
 
-    // Adiciona marcadores
-    frota.forEach(v => {
-      L.marker([v.lat, v.lng]).addTo(map)
-        .bindPopup(v.titulo);
-    });
-  </script>
+<label>Ônibus:</label>
+<select id="onibus">
+  <option value="">--Selecione--</option>
+  <option value="1">Ônibus 1</option>
+  <option value="2">Ônibus 2</option>
+  <option value="3">Ônibus 3</option>
+</select>
+
+<button onclick="atualizarMapa()">Mostrar Trajetória</button>
+
+<div id="map">Mapa vazio</div>
+</section>
+
+<div class="duvidas-ajuda">
+  <button onclick="scrollPara('duvidas')">Dúvidas</button>
+  <button onclick="scrollPara('ajuda')">Ajuda</button>
+</div>
+
+<section id="duvidas">
+<h2>Dúvidas Frequentes</h2>
+<p>Perguntas comuns e respostas.</p>
+</section>
+
+<section id="ajuda">
+<h2>Ajuda</h2>
+<p>Suporte e instruções.</p>
+</section>
+
+<script>
+// Simula trajetórias diferentes para cada linha
+const trajetorias = {
+  "101": "Linha 101: Terminal A → Rua 1 → Rua 2 → Terminal B",
+  "102": "Linha 102: Terminal C → Rua 3 → Rua 4 → Terminal D",
+  "103": "Linha 103: Terminal E → Rua 5 → Rua 6 → Terminal F"
+};
+
+function atualizarMapa() {
+  const linha = document.getElementById('linha').value;
+  const rota = document.getElementById('rota').value;
+  const onibus = document.getElementById('onibus').value;
+  const mapa = document.getElementById('map');
+
+  if(linha === "") {
+    mapa.innerHTML = "Selecione uma linha para visualizar";
+    return;
+  }
+
+  let texto = trajetorias[linha] || "Trajetória não disponível";
+  if(rota) texto += `<br>Rota selecionada: ${rota}`;
+  if(onibus) texto += `<br>Ônibus selecionado: ${onibus}`;
+  mapa.innerHTML = texto;
+}
+
+function scrollPara(id){ document.getElementById(id).scrollIntoView({behavior:'smooth'}); }
+</script>
+
 </body>
 </html>
